# wt32-eth01-gateway

./: .gitignore  README.md
docs/: README.md  gateway_ota.json  hardware.md  ota_update.md  ps18v62_2_bus.md  register_map.md  system_overview.md  wt32_eth01_pinout_and_wiring.md
gateway/: CMakeLists.txt  README.md  build.sh  flash.sh  partitions_ota_8mb.csv  sdkconfig  sdkconfig.defaults
gateway/include/: config.h  modbus_tcp.h  ota_update.h  rcu_client.h  register_map.h  state_cache.h
gateway/main/: CMakeLists.txt
gateway/src/: main.cpp  modbus_tcp.cpp  ota_update.cpp  rcu_client.cpp
rcu/: AHF_V4_Room_Control_Protocol.md  PS18V5_Test.mc3  README.md  THERMOSTAT_PROTOCOL_NOTES.md  flash.sh  main.c  note.txt  project_config.h
rcu/mcc_generated_files/: device_config.c  device_config.h  eusart.c  eusart.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  spi2.c  spi2.h  tmr2.c  tmr2.h
rcu/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  configurations.xml  project.xml
rcu/switch/: switch_input.c  switch_input.h  switch_led.c  switch_led.h
rcu/thermostat/: thermostat_panel.c  thermostat_panel.h
